--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
     defaultConfig {
+        vectorDrawables.useSupportLibrary = true
         applicationId "tori.studygroups"
         minSdkVersion 17
         targetSdkVersion 25
@@ -11,6 +12,7 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -23,6 +25,7 @@ android {
     sourceSets {
         main {
             java.srcDirs = ['src/main/java', 'src/main/java/main', 'src/main/java/tori/studygroups/main']
+            res.srcDirs = ['src/main/res', 'src/main/res/dimen2']
         }
     }
 }
@@ -36,11 +39,11 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:recyclerview-v7:25.3.1'
+    compile 'com.sendbird.sdk:sendbird-android-sdk:3.0.30'
+    compile 'com.android.support:design:25.3.1'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
 
 repositories {
     maven { url "https://raw.githubusercontent.com/smilefam/SendBird-SDK-Android/master/" }
-}
-dependencies {
-    compile 'com.sendbird.sdk:sendbird-android-sdk:3.0.30'
 }
