Login/register page first commit

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".mainActivities.MainActivity" />
+        <activity android:name=".mainActivities.SignupActivity" />
 
         <activity
             android:name=".utils.MediaPlayerActivity"
