--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
             android:name=".channels.ParticipantListActivity"
             android:label="@string/participant_list" />
         <activity android:name=".channels.ChannelsActivity" />
+        <activity android:name=".channels.CreateChannelActivity" />
 
 
     </application>
