--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     compile 'com.google.firebase:firebase-database:11.0.2'
     compile 'com.google.firebase:firebase-messaging:11.0.2'
     compile 'com.firebase:firebase-jobdispatcher:0.7.0'
+    compile 'com.google.android.gms:play-services-places:11.0.2'
     testCompile 'junit:junit:4.12'
 }
 
