Personal page with exam and arg     first commit

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,9 @@
             android:windowSoftInputMode="stateUnchanged"/>
         <activity android:name=".channels.EventsChannelListActivity"
             android:windowSoftInputMode="stateUnchanged"/>
+        <activity android:name=".Exams.ExamListActivity"
+            android:windowSoftInputMode="stateUnchanged"/>
+
 
         <service
             android:name=".services.MyFirebaseMessagingService">
