--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,8 @@ dependencies {
     compile 'com.google.firebase:firebase-messaging:11.0.2'
     compile 'com.firebase:firebase-jobdispatcher:0.7.0'
     compile 'com.google.android.gms:play-services-places:11.0.2'
+    compile 'com.thoughtbot:expandablerecyclerview:1.3'
+
     testCompile 'junit:junit:4.12'
 }
 
