personal page change with fragment delete deviceToken on disconnection

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,7 +43,7 @@
             android:windowSoftInputMode="stateUnchanged"/>
         <activity android:name=".channels.EventsChannelListActivity"
             android:windowSoftInputMode="stateUnchanged"/>
-        <activity android:name=".Exams.ExamListActivity"
+        <activity android:name=".exams.ActivityExamList"
             android:windowSoftInputMode="stateUnchanged"/>
 
 
