personal page finish

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
         <activity android:name=".utils.PhotoViewerActivity"/>
         <activity
             android:name=".utils.MediaPlayerActivity"
-            android:screenOrientation="landscape" />
+            android:configChanges="orientation|screenSize" />
         <activity
             android:name=".channels.ChatPartecipantListActivity"
             android:label="@string/participant_list" />
