--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,12 +42,13 @@ dependencies {
     compile 'com.android.support:design:25.3.1'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.jakewharton:butterknife:7.0.1'
-    compile 'com.google.firebase:firebase-auth:11.0.2'
-    compile 'com.google.firebase:firebase-database:11.0.2'
-    compile 'com.google.firebase:firebase-messaging:11.0.2'
-    compile 'com.firebase:firebase-jobdispatcher:0.7.0'
-    compile 'com.google.android.gms:play-services-places:11.0.2'
+    compile 'com.google.firebase:firebase-auth:11.0.4'
+    compile 'com.google.firebase:firebase-database:11.0.4'
+    compile 'com.google.firebase:firebase-messaging:11.0.4'
+    compile 'com.google.firebase:firebase-storage:11.0.4'
+    compile 'com.google.android.gms:play-services-places:11.0.4'
     compile 'com.thoughtbot:expandablerecyclerview:1.3'
+    compile 'com.github.medyo:android-about-page:1.2.1'
 
     testCompile 'junit:junit:4.12'
 }
