--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,10 @@
             android:label="@string/event_channel_list" />
         <activity android:name=".exams.ActivityExamList"
             android:windowSoftInputMode="stateAlwaysHidden"/>
+        <activity android:name=".mainActivities.AboutActivity"
+            android:windowSoftInputMode="stateAlwaysHidden"/>
+        <activity android:name=".mainActivities.SettingsActivity"
+            android:windowSoftInputMode="stateHidden"/>
 
 
         <service
