--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
         minSdkVersion 17
         targetSdkVersion 25
         versionCode 1
-        versionName "1.0"
+        versionName "1.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
@@ -49,6 +49,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-places:11.0.4'
     compile 'com.thoughtbot:expandablerecyclerview:1.3'
     compile 'com.github.medyo:android-about-page:1.2.1'
+    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
 
     testCompile 'junit:junit:4.12'
 }
